--- a/_posts/2019-06-06-模板.md
+++ b/_posts/2019-06-06-模板.md
@@ -1,4 +1,4 @@
-﻿---
+---
 layout:     post
 title:      模板
 subtitle:  
@@ -22,3 +22,6 @@ typora-root-url: ..
   - View：指JSP、HTML用来显示数据给用户
   - Controler：用来接收用户的请求，整个流程的控制器
 
+![1561539275316](/img/assets_2019/1561539275316.png)
+
+![1561539328626](/img/assets_2019/1561539328626.png)
