--- a/_posts/2019-06-06-模板.md
+++ b/_posts/2019-06-06-模板.md
@@ -11,17 +11,5 @@ tags:
 typora-root-url: ..
 ---
 
-## 三层架构和MVC
+demo
 
-- B/S三层架构
-  - 表现层：web层，一般使用MVC模型
-  - 业务层：service层
-  - 持久层：dao层
-- MVC模型
-  - Model：数据模型，JavaBean的类，用来进行数据封装
-  - View：指JSP、HTML用来显示数据给用户
-  - Controler：用来接收用户的请求，整个流程的控制器
-
-![1561539275316](/img/assets_2019/1561539275316.png)
-
-![1561539328626](/img/assets_2019/1561539328626.png)
