第四章 变量、作用域和内存问题 小结
第四章 变量、作用域和内存问题 小结

--- a/_posts/2019-06-05-第四章 变量、作用域和内存问题 小结.md
+++ b/_posts/2019-06-05-第四章 变量、作用域和内存问题 小结.md
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 ​    `JavaScript`变量可以用来保存两种类型的值：基本类型值和引用类型值。基本类型的值源自以下5种基本了数据类型：`Undefined`、`Null`、`Boolean`、`Number`、`String`。
 
-​    基本类型值和引用类型值具有以下特点：
+###     基本类型值和引用类型值具有以下特点：
 
 1. 基本类型值在内存中占据**固定大小的空间**， 因此被**保存在栈**中；
 2. 从一个变量向另一个变量复制基本类型的值，会创建这个值的一个副本；
@@ -23,7 +23,7 @@ typora-root-url: ..
 
 ​    所有变量（包括基本类型和引用类型）都存在于一个**执行环境（也称为作用域）**当中，这个执行环境决定了变量的生命周期，以及哪一部分代码可以访问其中的变量。
 
-​    以下是关于执行环境的几点总结：
+###     以下是关于执行环境的几点总结：
 
 1. 执行环境有全局执行环境（也称为全局环境）和函数执行环境之分；
 2. 每次进入一个新执行环境，都会创建一个用于搜索变量和函数的**作用域链**；
@@ -33,11 +33,10 @@ typora-root-url: ..
 
 ​    `JavaScript`是一门具有**自动垃圾收集机制**的编程语言，开发人员不必关心内存分配和回收问题。
 
-​    可以对`JavaScript`的垃圾收集例程作如下总结：
+###     可以对`JavaScript`的垃圾收集例程作如下总结：
 
 1. 离开作用域的值将被自动标记为可以回收，因此将在垃圾收集期间被删除；
 2. **“ 标记清除 ”** 是目前最主流的垃圾收集算法，这种算法的思想是给当前不使用的值加上标记，然后再回收其内存；
 3. 另一种垃圾收集算法是 **“ 引用计数 ”** ，这种算法的思想是跟踪记录所有值被引用的次数。`JavaScript`引擎目前都不再使用这种算法；但在 IE 中访问非原生`JavaScript`对象（如`DOM`元素）时，这种算法仍然可能会导致问题；
 4. 当代码中存在循环引用现象时，" 引用计数 "算法就会导致问题；
 5. 解除变量的引用不仅有助于消除循环引用现象，而且对垃圾收集也有好处。为了确保有效的回收内存，应该及时解除不再使用的全局对象、全局对象属性以及循环引用变量的引用。
-
