第六章 面向对象的程序设计 小结
第六章 面向对象的程序设计 小结

--- a/_posts/2019-06-06-第五章 引用类型 小结.md
+++ b/_posts/2019-06-06-第五章 引用类型 小结.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      第四章 变量、作用域和内存问题 小结
+title:      第五章 引用类型 小结
 subtitle:  
 date:       2019-06-05
 author:     
@@ -11,10 +11,9 @@ tags:
 typora-root-url: ..
 ---
 
+​    对象在`JavaScript`中被成为引用类型的值，而且有一些内置的引用类型可以用来创建特定的对象，
 
-## 第五章 引用类型 小结
-
-​    对象在`JavaScript`中被成为引用类型的值，而且有一些内置的引用类型可以用来创建特定的对象，现简要总结如下：
+### 现简要总结如下：
 
 1. 引用类型与传统面向对象程序设计中的类相似，但实现不同；
 2. `Object`是一个基础类型，**其他所有类型**都从`Object`继承了基本的行为；
@@ -24,7 +23,9 @@ typora-root-url: ..
 
 ​    函数实际上是`Function`类型的实例，因此函数也是对象；而这一点正是`JavaScript`最具有特色的地方。由于函数是对象，所以函数也拥有方法，可以用来增强行为。
 
-​    因为有了**基本包装类型**，所以`JavaScript`中的基本类型值可以被当做对象来访问。三种基本包装类型分别是：`Boolean` `Number` `String`。以下是它们共同的特征：
+​    因为有了**基本包装类型**，所以`JavaScript`中的基本类型值可以被当做对象来访问。三种基本包装类型分别是：`Boolean` `Number` `String`。
+
+### 以下是它们共同的特征：
 
 1. 每个包装类型都映射到同名的基本类型；
 2. 在读取模式下访问基本类型时，就会创建对应的基本包装类型的一个对象，从而方便了解数据操作；
