--- a/_posts/2019-06-20-数据类型深入：栈堆.md
+++ b/_posts/2019-06-20-数据类型深入：栈堆.md
@@ -42,3 +42,58 @@ typora-root-url: ..
 ![](/img/assets_2019/栈堆3.png)
 
 如上图所示，引用对象的复制， 其实是在堆中存储的指针地址的复制，obj和obj2中存储的都是指向堆中对象的地址。所以在obj2进行数据修改后，是堆中存储的数据发生了改变，obj中存储的地址还是指向的这个数据。
+
+案例1
+
+```javascript
+		var num = 50;
+        function f1(num) {
+            num = 60;
+            console.log(num);//结果是60
+        }
+        f1(num);
+        console.log(num);//结果是50
+```
+
+案例2：
+
+```javascript
+var num1 = 55;
+        var num2 = 66;
+        function f1(num, num1) {
+            num = 100;
+            num1 = 100;
+            num2 = 100;//这是一个隐式全局变量
+            console.log(num);//结果是100
+            console.log(num1);//结果是100
+            console.log(num2);//结果是100
+        }
+        f1(num1, num2);
+        console.log(num);//结果是 报错
+        console.log(num1);//结果是55
+        console.log(num2);//结果是100
+```
+
+案例3：
+
+```javascript
+		function Person(name,age,salary){
+            this.name=name;
+            this.age=age;
+            this.salary=salary;
+        }
+        function f1(person){
+            person.name='ls';
+            person= new Person('aa',18,10);
+        }
+        var p = new Person('zs',18,1000);
+        console.log(p.name);//结果是zs
+        f1(p);
+        console.log(p.name);//结果是ls
+```
+
+对案例3进行图解
+
+![](/img/assets_2019/案例3.png)
+
+如上图所示，创建p的时候，是在堆中开辟一个空间存储数据内容，p中存储的是指向`{"zs",18,1000}`内容的地址，所以第一次输出的时候通过地址找到了`p.name`的值为 ” zs “ 。调用函数 f1 之后，p将地址传入f1 函数，`person.name=”ls“`改变了堆中name属性的值，所以第二次输出`p.name`的值为 " ls " 。`person.new Person("aa",18,10)`语句的执行，是重新开辟了一个空间存储`{"aa",18,10}`，person中的值是指向这个内容的地址，没有改变p中的地址指向。
