--- a/_posts/2019-06-25-Vue2.0官方文档 知识点总结 1.md
+++ b/_posts/2019-06-25-Vue2.0官方文档 知识点总结 1.md
@@ -19,7 +19,9 @@ typora-root-url: ..
 <div id="app">
     {{content}}          <!--显示hello world-->
 </div>                   
-<div> {{content}} </div>  <!--显示{{content}}-->
+<div> 
+	{{content}} 
+</div>  <!--显示{{content}}-->
 ```
 
 ```javascript
@@ -30,8 +32,6 @@ typora-root-url: ..
             }
         })
 ```
-
-使用`vue`之后，不用再关注`DOM`的代码，而是把精力放在数据的操作上；
 
 在实例中添加方法，只要数据变化了，页面中的显示就会跟着变化，`$data/$el`都是`vue`的实例属性或者方法；
 
