--- a/_posts/2019-06-25-Vue2.0官方文档 知识点总结 1.md
+++ b/_posts/2019-06-25-Vue2.0官方文档 知识点总结 1.md
@@ -16,19 +16,15 @@ typora-root-url: ..
 ## vue初步了解
 
 ```html
-<div id="app">
-    {{content}}          <!--显示hello world-->
-</div>                   
-<div> 
-	{{content}} 
-</div>  <!--显示{{content}}-->
+<div id="app">{{con}}  </div>  <!--显示hello world-->        
+<div		 >{{con}}  </div>  <!--显示{{content}}-->
 ```
 
 ```javascript
         var app = new Vue({
             el: '#app',   //处理的DOM的范围
             data: {
-                content: 'hello world'
+                con: 'hello world'
             }
         })
 ```
