--- a/_posts/2019-06-29-《精通CSS 第三版》.md
+++ b/_posts/2019-06-29-《精通CSS 第三版》.md
@@ -115,3 +115,146 @@ input[type="email"]:invalid {
     </div>
 </div>
 ```
+
+- 多栏的文本基线对齐.css
+
+```css
+/* h2 是72px高，h3 是48px 高 ，文本是默认 16px 高。h2和h3是征文行高的整数倍。*/
+h2 {
+	font-size: 1.75em; /* 28px */
+    line-height:1.25; /* 28*1.25=35px */
+    margin-top: 1.036em; /* 29px */
+    margin-bottom :  .2859em; /* 8px */
+}
+h3 {
+	font-size: 1.314em; /* 21px */
+    line-height:1.29; /* 21*1.29=27px */
+    margin-top:  .619em; /* 13px */
+    margin-bottom : .38em; /* 8px */
+}
+```
+
+- 压印、浮雕标题.css
+
+```css
+.impressed {
+    background-color : #6990e1;
+    color : #31446B;
+    text-shadow : 0 -1px 1px #b3d6f9 , 0 1px 0 #243350;
+}
+.embossed {
+    background-color : #3c5486;
+    color : #92B1EF;
+    text-shadow : 0 -1px 0 #243350 , 0 1px 0 #def2fe;
+}
+```
+
+- 仿手写广告牌字体.css
+
+```css
+h1 {
+    font-family : Nunito ,"Arial Rounded MT Bold","Helvetica Rounded" , Arial,san-serif;
+    color : #d0bb78 ;
+    text-transform : uppercase;
+    font-weight:700;
+    text-shadow:
+        -1px 1px 0 #743132,
+        -2px 2px 0 #743132,
+        -3px 3px 0 #743132,
+        /* 以 1px 为单位累加 */
+        -22px 22px 0 #743132,
+        -23px 23px 0 #743132;
+}
+```
+
+-  3D阴影效果标题.css
+
+```css
+h1 {
+    font-family : Nunito ,"Arial Rounded MT Bold","Helvetica Rounded" , Arial,san-serif;
+    color : #d0bb78 ;
+    text-transform : uppercase;
+    font-weight:700;
+    text-shadow:
+    	/* 首先，各个方向上的白色阴影构成轮廓 */
+        -2px 2px 0 #fff,
+        0px 2px 0 #fff,
+        0px 3px 0 #fff,
+        3px 0px 0 #fff,
+        -3px 0px 0 #fff,
+        2px 2px 0 #fff,
+        2px -2px 0 #fff,
+        -2px -2px 0 #fff,
+        /* ......其次，交错叠加的阴影让颜色沿两个方向凸显 */
+        -3px 3px 0 #743b34,
+        -4px 3px 0 #a8564b,
+        -4px 5px 0 #743b34,
+        -5px 4px 0 #a8564b,
+        -5px 6px 0 #743b34,
+        /* ....继续叠加.... */
+        -22px 21px 0 #a8564d,
+        -22px 23px 0 #743b34,
+        -23px 22px 0 #a8564d,
+        -23px 24px 0 #743b34,
+}
+```
+
+- 评论气泡小三角形.css
+
+```css
+	.comment{
+            position: absolute;
+            width: 4em;
+            margin-left: -2.5em;
+            margin-top: -0.5em;
+            background-color: #dcf0ff;
+        }
+	.comment:after { /*用为元素添加的小三角*/
+            position: absolute;
+            content: '';
+            display: block;
+            width: 0;
+            height: 0;
+            border: .5em solid #dcf0ff;
+            border-bottom-color: transparent; /*边框部分透明*/
+            border-right-color: transparent;
+            position: absolute;
+            right: -1em;
+            top: .5em;
+        }
+```
+
+![](/img/assets_2019/comment.png)
+
+- 在空间中行内块的垂直居中.css
+
+```css
+.author-image ,
+.author-info {
+    vertical-align:middle;
+}
+```
+
+- 在容器里面行内块元素的垂直居中.css
+
+```css
+.author-meta:before {
+    content :'';
+    display:inline-block;
+    vertical-align:middle;
+    height:100%;
+}
+    
+```
+
+- 布局中左一，右三.css
+
+```css
+.navbar ul {
+    display:flex
+}
+.navbar li:first-child {
+    margin-rgiht:auto;/* 用第一项吃掉剩余所有空间把其他项推到右边 */
+}
+```
+
