--- a/_posts/2019-06-29-《精通CSS 第三版》.md
+++ b/_posts/2019-06-29-《精通CSS 第三版》.md
@@ -1,16 +1,15 @@
 ---
 layout:     post
-title:      《精通CSS 第三版》中好用CSS收集
+title:      《精通CSS 第三版》好用 CSS样式整理
 subtitle:  
-date:       2019-06-04
+date:       2019-06-29
 author:     
 header-img: 
 catalog: true
 tags:
-    - 《精通CSS 第三版》
+    - 《精通CSS 第三版》知识点
 typora-root-url: ..
 ---
-
 
 
 - 缩写词解释.css
