--- a/_posts/2019-06-23-DOM相关知识点整理.md
+++ b/_posts/2019-06-23-DOM相关知识点整理.md
@@ -575,13 +575,13 @@ document.getElementById('im').onclick=function(){
 }
 ```
 
-```javascript
-//方法2：return flase 写在行内式中
+```html
+<!--方法2：return flase 写在行内式中-->
 <a href="http://www.baidu.com" onclick="alert('哎呀,我被点了'); return false">百度</a>
 ```
 
 ```html
-//方法3：注意这里哦，这里调用f1的函数，返回的是一个false，所以这里要添加一个return
+<!--方法3：注意这里哦，这里调用f1的函数，返回的是一个false，所以这里要添加一个return-->
 <a href="http://www.baidu.com" onclick="return f1()">百度</a>
 ```
 
@@ -592,3 +592,138 @@ function f1() {
 }
 ```
 
+##### 案例15：鼠标进入onmouseover、离开onmouseout改变标签的背景颜色
+
+```javascript
+        //获取所有的li标签
+        var list = document.getElementsByTagName("li");
+        for (var i = 0; i < list.length; i++) {
+            //为li注册鼠标进入事件
+            list[i].onmouseover = function () {
+                this.style.backgroundColor = "yellow";
+            };
+            //为li注册鼠标离开事件
+            list[i].onmouseout = function () {
+                //恢复到这个标签默认的颜色
+                this.style.backgroundColor = "";
+            };
+        }
+```
+
+##### 注意技巧4：
+
+1. `getElementsByTagName`获取的是数组，如果只使用一个，就要加序号`getElementsByTagName("li")[0]`
+
+2. 设置元素的样式的方式：
+
+   ​	1. **对象 ** . style . **属性 **= **值**；
+
+   	2. **对象** . className = **值**；
+
+3. `对象.className=“”`使用的时候要注意，若只写想要设置的类名，会**覆盖这个对象所有的类**。
+
+##### 案例17：点击按钮，修改div的宽、高、背景颜色
+
+```html
+	<input type="button" value="设置样式" id="btn"/>
+	<div id="dv"></div>
+```
+
+```javascript
+	//方法一：直接修改样式 .style.属性 = 值；
+	document.getElementById$("btn").onclick = function () {
+		document.getElementById("dv").style.width = "300px";
+		document.getElementById("dv").style.height = "200px";
+		document.getElementById("dv").style.backgroundColor = "pink";
+        //原来在css中是background-color
+	};
+```
+
+```css
+	/*方法二：通过给元素添加css样式属性 .className = 值； */
+	.cls {width: 300px;height: 200px;background-color: yellow;border: 2px solid red;}
+```
+
+```javascript
+	my$("btn").onclick = function () {
+		//在js代码中DOM操作的时候,设置元素的类样式,不用class关键字,应该使用,className
+		my$("dv").className="cls";
+        //等价于：<div id="dv" class=“cls”/cls></div>
+	};
+```
+
+##### 注意技巧5：
+
+如果在 css 中属性是**多个单词**（带`-`）的写法，那么在js代码中DOM操作的时候，要用**驼峰命名法**来调用
+
+##### 案例18：获取焦点onfocus，失去焦点事件onblur
+
+```javascript
+		my$("txt").onfocus = function () {
+			//判断文本框的内容是不是默认的内容
+			if (this.value == "请输入搜索内容") {
+				this.value = "";//清空文本框
+				this.style.color = "black";
+			}
+		};
+		my$("txt").onblur = function () {
+		//1.判断字符串方式
+			if (this.value == "") {
+				this.value = "请输入搜索内容";
+				this.style.color = "gray";
+			}
+		//2.判断字符串长度方式，更推荐这种，数字判断的运行效率高
+			if (this.value.length == 0) {
+				this.value = "请输入搜索内容";
+				this.style.color = "gray";
+			}
+		};
+```
+
+##### 注意技巧6：
+
+1. 如果这个属性在浏览器中不支持，那么这个属性的类型是`undefined`。
+
+
+##### 案例19：自定义属性
+
+1. 设置自定义属性：`setAttribute("属性的名字","属性的值");`
+2. 获取自定义属性的值：`getAttribute("属性的名字");`
+3. 移除义属性：`removeAttribute("属性的名字");`
+
+```html
+<ul id="uu">
+    <li>数学成绩</li>
+    <li>英语成绩</li>
+    <li>语文成绩</li>
+    <li>科学成绩</li>
+    <li>历史成绩</li>
+</ul>
+```
+
+```javascript
+var list=my$("uu").getElementsByTagName("li");//根据id获取ul标签,并且或者该标签中所有的li
+//为每个li添加自定义属性
+for(var i=0;i<list.length;i++){//循环遍历
+	list[i].setAttribute("score",(i+1)*10);//添加在DOM对象上,不在标签中
+	list[i].onclick=function(){//点击每个li标签,获取对应的自定义属性值
+		alert(this.getAttribute("score"));
+	};
+}
+//移除自定义属性
+document.getElementById("btn").onclick=function () {
+	document.getElementById("dv").removeAttribute("score");//移除自定义属性，没值也没属性
+	document.getElementById("dv").className="";//移除元素的类样式，值没有了,但是属性还是有的	
+	document.getElementById("dv").removeAttribute("class");//移除自定义属性，没值也没属性
+};
+```
+
+##### 案例20：获取标签的内容
+
+| 分类 |         名称          | 说明                                    | 使用时的区别                     |
+| :--- | :-------------------: | :-------------------------------------- | -------------------------------- |
+| 属性 |      `innerHTML`      | 设置或返回元素开始和结束标签之间的 HTML | 保持编写的格式、样式标签<>       |
+| 属性 |      `innerText`      | 设置或返回元素中去除所有标签的内容      | 去掉所有格式以及标签的纯文本内容 |
+| 属性 |    `textContent `     | 设置或返回指定节点的文本内容            | 去掉标签后，保留文本样式，有回车 |
+| 方法 |  `document.write()`   | 向文档写入指定的内容                    |                                  |
+| 方法 | `document.writeln() ` | 向文档写入指定的内容并换行              |                                  |
