--- a/_posts/2019-07-05-面试题整理 1（主要是css）.md
+++ b/_posts/2019-07-05-面试题整理 1（主要是css）.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      CSS布局整理
+title:      面试题整理1（主要是css）
 subtitle:  
 date:       2019-07-05
 author:     
@@ -11,7 +11,7 @@ tags:
 typora-root-url: ..
 ---
 
-# 面试题不定期整理
+# 面试题整理1（主要是css）
 
 
 
@@ -53,6 +53,29 @@ typora-root-url: ..
        width:25%;
        heigth:100px;/*高度给定*/
        boxing-size：border-box;
+   }
+   ```
+
+   ④响应式布局（根据屏幕大小动态调整页面布局）
+
+   ```css
+   .menu {
+       width:23%;
+       height:100px;
+       float:left;
+       margin:30px 1%;
+   }
+   @media (max-with:800px){
+       .menu {
+           width:46%;
+           margin:30px 2%;
+       }
+   }
+   @media (max-with:500px){
+       .menu {
+           width:90%;
+           margin:30px 5%;
+       }
    }
    ```
 
