--- a/_posts/2019-07-10-面试题整理 6 （笔试） .md
+++ b/_posts/2019-07-10-面试题整理 6 （笔试） .md
@@ -16,14 +16,84 @@ typora-root-url: ..
 
 
 1. 跨域怎么实现？jsonp的原理是什么？
+
 2. h5新标签有哪些？为什么要加强语义化？
+
 3. 为什么要清除浮动？怎么清除浮动？
+
 4. 行内元素、块元素有哪些？它们有什么不同？
+
 5. 有哪几种存储方式？有什么不同？
+
 6. setTimeout输出值的时候，如何实现i按序输出？
+
 7. vue实现双向绑定的原理？
+
 8. vue组件之间的传值？
+
 9. 点击按钮进行数据请求，怎么实现按序执行请求？
+
 10. 怎么让文本不自动换行？怎么让超过文本部分变成省略号？
+
 11. vue的生命周期有哪些？它们有什么不同？
 
+    
+
+    详解：
+
+1. 跨域怎么实现？jsonp的原理是什么？
+
+   跨域，指的是浏览器不能执行其他网站的脚本。浏览器执行`javascript`脚本时，会检查这个脚本属于哪个页面，如果不是同源页面，就不会被执行。
+
+   解决办法：
+
+   ①**JSONP**：注意JSONP只支持GET请求，不支持POST请求。
+
+   原理：ajax请求受同源策略影响，不允许进行跨域请求，而**script标签src属性**中的链接却可以**访问跨域的js脚本**，利用这个特性，服务端不再返回JSON格式的数据，而是**返回一段调用某个函数的js代码**，在src中进行了调用，这样实现了跨域。
+
+   ②**代理**：写后端接口，在后端调用页面拿到返回值返回给html文件。相当于绕过了浏览器，就不会存在跨域问题。
+
+   ③**PHP端修改header**
+
+   ```javascript
+   header('Access-Control-Allow-Origin:*');//允许所有来源访问
+   header('Access-Control-Allow-Method:POST,GET');//允许访问的方式
+   ```
+
+2. h5新标签有哪些？为什么要加强语义化？
+
+   
+
+3. 为什么要清除浮动？怎么清除浮动？
+
+   
+
+4. 行内元素、块元素有哪些？它们有什么不同？
+
+   
+
+5. 有哪几种存储方式？有什么不同？
+
+   
+
+6. setTimeout输出值的时候，如何实现i按序输出？
+
+   
+
+7. vue实现双向绑定的原理？
+
+   
+
+8. vue组件之间的传值？
+
+   
+
+9. 点击按钮进行数据请求，怎么实现按序执行请求？
+
+   
+
+10. 怎么让文本不自动换行？怎么让超过文本部分变成省略号？
+
+    
+
+11. vue的生命周期有哪些？它们有什么不同？
