--- a/_posts/2019-07-11-面试题整理 7 （海康） .md
+++ b/_posts/2019-07-11-面试题整理 7 （海康） .md
@@ -137,7 +137,7 @@ typora-root-url: ..
 
 7. ## vue使用的UI框架？
 
-   animate.css是一款前端动画库，相似的有velocity-animate；
+   **animate.css**是一款前端动画库，相似的有velocity-animate；
 
    ​	（element ui框架的按钮组件；
 
@@ -155,11 +155,13 @@ typora-root-url: ..
 
    ​	Vue-Blu是基于Vue.js和Bulma开发的开源UI组件库。旨在为PC端的前端开发(特别是中后台产品)提供一个快速且灵活的解决方案。）
 
-   首先`npm install animate.css --save`；
+   **使用步骤：**
 
-   然后在vue文件的script中引入`import animate from 'animate.css'`；
+   1. **首先`npm install animate.css --save`；**
 
-   最后绑定元素使用
+   2. 然后在vue文件的script中**引入`import animate from 'animate.css'`；**
+
+   3. 最后**绑定元素使用**，如下：
 
    ```vue
    <template>
@@ -177,7 +179,7 @@ typora-root-url: ..
    }
    ```
 
-   部分api
+   部分api常见：
 
    ```javascript
    	fade: {
@@ -263,7 +265,7 @@ typora-root-url: ..
 
 8. ## npm中的工具了解过吗？（warn）
 
-   npm就是JavaScript的包管理工具。npm主要用来下载，安装，管理第三方模块。
+   **npm就是JavaScript的包管理工具。**npm主要用来下载，安装，管理第三方模块。
 
    创建一个包描述文件：`npm init [-y]`
 
