--- a/_posts/2019-07-05-面试题整理 1（主要是css）.md
+++ b/_posts/2019-07-05-面试题整理 1（主要是css）.md
@@ -36,17 +36,17 @@ typora-root-url: ..
 
 1. app适配怎么写？使用的单位是什么？（rem）
 
-   解答：①视口`viewPort`适配，PC和手机屏幕不匹配的问题。
+   解答：①**视口`viewPort`适配**，PC和手机屏幕不匹配的问题。
 
    ```html
    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scale=no,maximum-scale=1.0,minimum-scale=1.0">
    ```
 
-   ②图片不清晰问题，使用大一倍的图片，通过`css`的`width`和`height`进行强制压缩到原来大小；
+   ②**图片不清晰问题**，使用大一倍的图片，通过`css`的`width`和`height`进行强制压缩到原来大小；
 
    背景图使用`background-size：contain`单边填充或者`background-size：cover`按比例填充适配。
 
-   ③流体布局（宽度百分比）
+   ③**流体布局**（宽度百分比）
 
    ```css
    .menu {
@@ -56,7 +56,7 @@ typora-root-url: ..
    }
    ```
 
-   ④响应式布局（根据屏幕大小动态调整页面布局）
+   ④**响应式布局**（根据屏幕大小动态调整页面布局）
 
    ```css
    .menu {
