--- a/_posts/2019-07-11-面试题整理 7 （海康） .md
+++ b/_posts/2019-07-11-面试题整理 7 （海康） .md
@@ -23,7 +23,7 @@ typora-root-url: ..
 6. this的指向问题？
 7. vue使用的UI框架？
 8. npm中的工具了解过吗？（yarn）
-9. Node.js了解吗？
+9. Node.js了解吗？  
 10. 详细讲一下项目？后端调用？
 
 
@@ -38,54 +38,58 @@ typora-root-url: ..
 
    **缺点**：由于闭包会使用函数中的变量存在在内存中，内存消耗很大，所以不能滥用闭包；解决的办法是退出函数之前，将不使用的局部变量删除；
 
-2. ## css中怎么使盒子上下居中（面试官说水平居中太简单了orz...）？
+2. ## css中怎么使盒子上下居中（面试官说水平居中太简单了）？
 
-   解答：方法一：设置垂直居中的时候要注意，先**给祖先元素`html`和`body`的高度设置为100%**（默认是0）；并且**清除默认样式**（`margin`和`padding`都设置为0，否则浏览器就会出现滚动条），然后**给子盒子相对定位和位移**`position：relative;top:50%;`，然后**减去本身宽度的一半**即可（`margin-top：负自身高度的一半` // `transform：translateY(-50%)`向上偏移自身高度的一半；
+   解答：方法一：
 
-   注意：top、bottom、left、right的百分比值都是相对于包含块的高度、宽度的；
+   ​	设置垂直居中的时候要注意，先**给祖先元素`html`和`body`的高度设置为100%**（默认是0）；并且**清除默认样式**（`margin`和`padding`都设置为0，否则浏览器就会出现滚动条），然后**给子盒子相对定位和位移**`position：relative;top:50%;`，然后**减去本身宽度的一半**即可（`margin-top：负自身高度的一半` // `transform：translateY(-50%)`向上偏移自身高度的一半；
 
-   方法二：**弹性盒子**。给**父元素设置`display:flex; align-items:center;`**设置body里的元素垂直居中；（`justify-content:center;`定义body里的元素水平居中）
+   ​	注意：top、bottom、left、right的百分比值都是相对于包含块的高度、宽度的；
+
+   方法二：
+
+   ​	**弹性盒子**。给**父元素设置`display:flex; align-items:center;`**设置body里的元素垂直居中；（`justify-content:center;`定义body里的元素水平居中）
 
 3. ## js中本地存储有哪些？有什么不同？
 
-   cookie、localStorage、sessionStorage
+   `cookie`、`localStorage`、`sessionStorage`；
 
-   相同点：都保存在浏览器端
+   相同点：都保存在浏览器端；
 
    不同点：
 
    **①传递方式不同**
 
-   ​	cookie数据始终在**同源的http请求中携带**（即使不需要），即cookie在浏览器和服务器间来回传递。
+   ​	`cookie`数据始终在**同源的http请求中携带**（即使不需要），即`cookie`在浏览器和服务器间来回传递。
 
-   ​	sessionStorage和localStorage不会自动把数据发给服务器，**仅在本地保存**。
+   ​	`sessionStorage`和`localStorage`不会自动把数据发给服务器，**仅在本地保存**。
 
    **②数据大小不同**
 
-   ​	（cookie数据还有路径（path）的概念，可以限制cookie只属于某个路径下。）
-   ​	存储大小限制也不同，cookie数据**不能超过4k**，同时因为每次http请求都会携带cookie，所以cookie只适合保存很小的数据，如会话标识。
+   ​	（`cookie`数据还有路径（path）的概念，可以限制cookie只属于某个路径下。）
+   ​	存储大小限制也不同，cookie数据**不能超过4k**，同时因为每次http请求都会携带`cookie`，所以cookie只适合保存很小的数据，如会话标识。
 
-   ​	sessionStorage和localStorage 虽然也有存储大小的限制，但比cookie大得多，可以达到5M或更大。
+   ​	`sessionStorage`和`localStorage` 虽然也有存储大小的限制，但比cookie大得多，可以达到5M或更大。
 
    **③数据有效期不同**
 
-   ​	sessionStorage：仅在当前**浏览器窗口关闭前有效**，自然也就不可能持久保持；
+   ​	`sessionStorage`：仅在当前**浏览器窗口关闭前有效**，自然也就不可能持久保持；
 
-   ​	localStorage：**始终有效**，窗口或浏览器关闭也一直保存，因此用作持久数据；
+   ​	`localStorage`：**始终有效**，窗口或浏览器关闭也一直保存，因此用作持久数据；
 
-   ​	cookie只在设置的**cookie过期时间之前**一直有效，即使窗口或浏览器关闭。
+   ​	`cookie`只在设置的**cookie过期时间之前**一直有效，即使窗口或浏览器关闭。
 
    **④作用域不同**
 
-   ​	sessionStorage**不在不同的浏览器窗口中共享**，即使是同一个页面；
+   ​	`sessionStorage`**不在不同的浏览器窗口中共享**，即使是同一个页面；
 
-   ​	localStorage 在所有**同源窗口中都是共享**的；
+   ​	`localStorage `在所有**同源窗口中都是共享**的；
 
-   ​	cookie也是在所有**同源窗口中都是共享**的。
+   ​	`cookie`也是在所有**同源窗口中都是共享**的。
 
 4. ## cookie中的session了解吗？
 
-   cookie和sessiom是两种**保持会话**状态的方法。
+   `cookie`和`sessiom`是两种**保持会话**状态的方法。
 
    ​	cookie就是指客户端在向服务端发起请求的时候，服务端会在进行response的时候给当前客户端的一小段文本信息，并保存在当前的客户端的浏览器中，这一小段cookie文本信息也就是这个客户端去访问服务端的通行证，有了这个通行证，以后当这个客户端再去访问服务端的时候，服务端便知道是谁拿着通行证去进行访问了。
 
@@ -298,11 +302,11 @@ typora-root-url: ..
 
 9. ## Node.js了解吗？
 
-   ​		根据官方文档可以知道，node就是一个给予谷歌v8引擎的一个javascript的运行时，可以理解为运行js的一个虚拟机。他使用的是一个事件驱动，非阻塞I/O模型 ，他是将js的运行环境搬到了服务器端，和客户端没有一点关系。是一个纯服务端的东西，node只是为js提供了一个平台。
+   ​		根据官方文档可以知道，node就是一个给予谷歌v8引擎的一个javascript的运行时，可以理解为**运行js的一个虚拟机**。他使用的是一个事件驱动，非阻塞I/O模型 ，他是**将js的运行环境搬到了服务器端**，和客户端没有一点关系。是一个纯服务端的东西，node只是**为js提供了一个平台**。
 
-   　　node里面其实还分了两块，一是封装了v8引擎，目的是为了执行es（如定义变量，定义函数等），另外一个提供了大量的工具库,是帮助node实现各种功能的，提供了一些以前js的环境办不到的事情，比如文件操作，网络操作，操作系统的操作。
+   　　node里面其实还分了两块，一是封装了v8引擎，目的是为了执行es（如定义变量，定义函数等），另外一个提供了大量的工具库，是帮助node实现各种功能的，提供了一些以前js的环境办不到的事情，比如文件操作，网络操作，操作系统的操作。
 
-   　　既然node是一个平台（所谓的平台就是用来运行特定语言的），也就意味着node是用来运行语言的，那么java也是语言，node能运行java吗？据nodejs创始人Ryan Dahl回忆，他最初是选择了Ruby这门语言，但是Ruby这门语言的虚拟机效率不怎么样最终放弃了，按照这种思路，貌似node将java的虚拟机集成进来应该可以运行java，但node作者最终选择了javascript。
+   ​	既然node是一个平台（所谓的平台就是用来运行特定语言的），也就意味着node是用来运行语言的，那么java也是语言，node能运行java吗？据nodejs创始人Ryan Dahl回忆，他最初是选择了Ruby这门语言，但是Ruby这门语言的虚拟机效率不怎么样最终放弃了，按照这种思路，貌似node将java的虚拟机集成进来应该可以运行java，但node作者最终选择了javascript。
 
    　　这样js就实现了在服务端运行的可能，js运行在node平台上（分为v8部分，用来执行es，和大量的工具库组件（API）称之为libuv，提供了以前js的环境办不到的事，如文件操作，网络操作等等）。
 
@@ -310,10 +314,11 @@ typora-root-url: ..
 
    ​		（1）node可以**接受客户端用户的所有请求**，并且能够快速的给出响应，因此node可以用来做网站。
 
-   　　（2）node可以作为一个**中间层来来分发调用数据接口**，比如有一个网站数据是有java提供的，我们可以让node作为一个中间层，来接受用户的请求，然后通过node来调用java数据接口，获取到数据后直接在node层面做html的瓶装，然后将渲染好的页面直接给用户。为什么要这样做，直接请求java接口不行吗，这是因为node被称之为高性能的web服务器，在并发和抗压方面都比传统的平台要好很多，因此这样一包装可以极大的减轻服务器的开发。
+   　　（2）node可以作为一个**中间层来来分发调用数据接口**，比如有一个网站数据是有java提供的，我们可以让node作为一个中间层，来接受用户的请求，然后**通过node来调用java数据接口**，获取到数据后直接在node层面做html的封装，然后将渲染好的页面直接给用户。为什么要这样做，直接请求java接口不行吗，这是因为node被称之为**高性能的web服务器**，在**并发和抗压**方面都比传统的平台要好很多，因此这样一包装可以极大的减轻服务器的开发。
 
    　　通过上面的两点，可以总结出，node在web中要么从前端页面到后端服务全包了，一个是只做其中的一点。
 
    　　**一言以蔽之，node就是一个javascript的运行环境（平台），他不是一门语言，也不是javascript的框架。可以用来开发服务端应用程序，web系统。其特点是体积小，快速，高性能。**
 
-10. ## 详细讲一下项目？后端调用？
+   
+
